ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2012/12/03 - jgonzale - Simulator - 4.3.3
	BUGFIX:		TASK_end / PARAVER_end order reversed. On file_data_access
				total number of file pointers reserved minus 2, so as to 
				guarantee the availability to the Paraver trace generator.

2012/12/03 - jgonzale - Simulator - 4.3.2
	BUGFIX:		TASK_end was called after PARAVER_end causing a resource lock
				regarding the total number of files opened.

2012/11/23 - jgonzale - Other
	CHANGES: 	Version update to '4.3.1'

	CHANGES:	Modifications to adapt to the build farm

2012/10/19 - jgonzale - Other
	CHANGES:	Version update to '4.3.0'

	CHANGES:	Minor cosmetic changes in the output

2012/10/19 - jgonzale - Other
	BUGFIX:		Solved a bug in the compilation system of the 'common_utilities'
				that prevent the Dimemas trace to create nanosecond traces.

2012/10/19 - jgonzale - Simulator
	CHANGES:	Using negative values in the 'modules information' field
				of the CFG file now indicated the simulator that all
				CPU bursts inside this module will change its duration to
				absoulte value of the number indicated. Required to
				perform 'forced balancing' simulations.

2012/10/10 - jgonzale - prv2dim
	CHANGES:	Removed a wrong information message in the
				'ParaverTraceParser'.

	CHANGES: 	Version updated to '4.2.2'.

2012/10/10 - jgonzale - Other
	BUGFIX:		Solved the missing definition 'DIMEMAS_NEW_TRACE' on
				'common_utilities' commodity library.	

	CHANGES:	Version updated to '4.2.1'.

	CHANGES:	Updated README file.

2012/10/09 - jgonzale - Simulator
	BUGFIX:		Solved a massive leak in 'file_data_access.c' when
				reading actions. 'op_fields' variable was never free'd
				causing a total memory waste (each trace line stay in
				memory during the whole execution)
